[gd_scene load_steps=2 format=2]

[ext_resource path="res://AudioManager/AudioManager.gd" type="Script" id=1]

[node name="AudioManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="Node2D" parent="."]

[node name="music_player" type="AudioStreamPlayer2D" parent="Music"]

[node name="SFX" type="Node2D" parent="."]

[node name="Player1" type="AudioStreamPlayer2D" parent="SFX"]

[node name="Player2" type="AudioStreamPlayer2D" parent="SFX"]
